# zap-soundboard

./: .eslintrc.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASING.md  index.html  install-linux.sh  jsconfig.json  meson.build  meson_options.txt  package-lock.json  package-lock.json.license  package.json  uninstall-linux.sh  zap.doap
.gitlab/issue_templates/: Release.md
.reuse/: dep5
@types/: index.d.ts
_install/share/applications/: fr.romainvigier.zap.desktop
_install/share/dbus-1/interfaces/: fr.romainvigier.zap.Collections.xml  fr.romainvigier.zap.Zaps.xml
_install/share/dbus-1/services/: fr.romainvigier.zap.service
_install/share/fr.romainvigier.zap/: fr.romainvigier.zap.data.gresource  fr.romainvigier.zap.src.gresource
_install/share/fr.romainvigier.zap/ontology/: zap.description  zap.ontology
_install/share/glib-2.0/schemas/: fr.romainvigier.zap.gschema.xml  gschemas.compiled
_install/share/icons/hicolor/: icon-theme.cache
_install/share/locale/de/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/locale/es/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/locale/fr/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/locale/hr/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/locale/nl/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/locale/pt_BR/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/locale/sv/LC_MESSAGES/: fr.romainvigier.zap.mo
_install/share/metainfo/: fr.romainvigier.zap.metainfo.xml
build-aux/: fr.romainvigier.zap.yml  get_release_notes.py
css/: style-dark.css  style.css
data/: fr.romainvigier.zap.data.gresource.xml  fr.romainvigier.zap.desktop  fr.romainvigier.zap.gschema.xml  fr.romainvigier.zap.metainfo.xml  fr.romainvigier.zap.service  gschemas.compiled  meson.build
data/css/: colorpill-color.template.css  style-dark.css  style-hc.css  style.css  zap-item-color-dark.template.css  zap-item-color.template.css
data/sounds/: applause.ogg.license  bark.ogg.license  theme-song-8bit-loop.ogg.license
data/tracker/: meson.build  zap.ontology
data/ui/: AddZapPopup.ui  CollectionItem.ui  CollectionListItem.ui  CollectionsMenuButton.ui  EditZapPopover.ui  FileChooserButton.ui  PreferencesWindow.ui  ShortcutsWindow.ui  Window.ui  ZapItem.ui  ZapListItem.ui
js/: app.js  db.js  importexport.js  player.js  settings.js
js/models/: Group.js
js/services/: CollectionsService.js  ZapsService.js
js/ui/: colorpicker.js  importdialog.js  settingspanel.js  sidebar.js  soundboard.js  toolbar.js  zapitem.js
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  fr.romainvigier.zap.pot  hr.po  meson.build  nl.po  pt_BR.po  sv.po
resources/screenshots/: 1.png.license
src/: fr.romainvigier.zap.js  fr.romainvigier.zap.src.gresource.xml  main.js  meson.build
src/classes/: Application.js  Collection.js  Group.js  Zap.js
src/enums/: Color.js
src/services/: Collections.js  Config.js  DBus.js  Database.js  Player.js  Service.js  Zaps.js
src/widgets/: AddZapPopup.js  CollectionItem.js  CollectionsMenuButton.js  ColorChooser.js  ColorPill.js  EditZapPopover.js  FileChooserButton.js  PreferencesWindow.js  ProgressBar.js  Window.js  ZapGroupSeparator.js  ZapItem.js
web/: README.md  index.html
web/css/: style-dark.css  style.css  variables.css
web/js/: app.js  db.js  importexport.js  player.js  settings.js  state.js
web/js/models/: Collection.js  Color.js  Zap.js
web/js/ui/: addmodal.js  editmodal.js  icons.js  importdialog.js  settingspanel.js  soundboard.js  toast.js  toolbar.js  tutorial.js  zapitem.js
